as2/7.0/modules/ROOT/pages/as2-connector-studio.adoc
= Using Anypoint Studio to Configure AS2 Connector 7.0 
:page-aliases: connectors::as2/AS2-connector-studio.adoc

Anypoint Studio (Studio) editors help you design and update your Mule applications, properties, and configuration files.

To add and configure a connector in Studio:

. <<create-mule-project,Create a Mule project>>.
. <<add-connector-to-project,Add the connector to your Mule project>>.
. <<configure-input-source,Configure an input source for the connector's flow>>.
. <<add-connector-operation,Add a connector operation to the flow>>.
. <<configure-global-element,Configure a global element for the connector>>.
. <<configure-external-libraries,Configure a Global Element for External Libraries>>.

When you run the connector, you can view the app log to check for problems, as described in <<view-app-log,View the App Log>>.

If you are new to configuring connectors in Studio, see xref:connectors::introduction/intro-config-use-studio.adoc[Using Anypoint Studio to Configure a Connector].
If, after reading this topic, you need additional information about the connector fields, see the xref:as2-connector-reference.adoc[AS2 Connector Reference].

[[create-mule-project]]
== Create a Mule Project

In Studio, create a new Mule project in which to add and configure the connector:

. In Studio, select *File > New > Mule Project*.
. Enter a name for your Mule project and click *Finish*.


[[add-connector-to-project]]
== Add the Connector to Your Mule Project

Add AS2 Connector to your Mule project to automatically populate the XML code with the connector's namespace and schema location and add the required dependencies to the project's `pom.xml` file:

. In the *Mule Palette* view, click *(X) Search in Exchange*.
. In *Add Modules to Project*, type `as2` in the search field.
. Click *AS2* in *Available modules*.
. Click *Add*.
. Click *Finish*.

Adding a connector to a Mule project in Studio does not make that connector available to other projects in your Studio workspace.


[[configure-input-source]]
== Configure a Source

A source initiates a flow when a specified condition is met.
You can configure one of these input sources to use with AS2 Connector:

* *As 2 listener* +
Listens for AS2 `send` requests
* *As 2 mdn listener* +
MDN listener that listens for AS2 listener requests
* *Non repudiation listener* +
Listens for signed messages and MDNs that are configured for non-repudiation storage
* *HTTP Listener* +
Initiates a flow each time it receives a request on the configured host and port
* *Scheduler* +
Initiates a flow when a time-based condition is met


For example, to configure an *HTTP Listener*, follow these steps:

. In the *Mule Palette* view, select *HTTP > Listener*.
. Drag *Listener* to the Studio canvas.
. On the *Listener* configuration screen, optionally change the value of the *Display Name* field.
. Specify a value for the *Path* field.
. Click the plus sign (+) next to the *Connector configuration* field to configure a global element that can be used by all instances of the HTTP listener in the app.
. On the *General* tab, specify the connection information for the connector.
. On the *TLS* tab, optionally specify the TLS information for the connector.
. On the *Advanced* tab, optionally specify reconnection information, including a reconnection strategy.
. Click *Test Connection* to confirm that Mule can connect with the specified server.
. Click *OK*.

[[add-connector-operation]]
== Add a Connector Operation to the Flow

When you add a connector operation to your flow, you immediately define a specific operation for that connector to perform.

To add an operation for AS2 Connector, follow these steps:

. In the *Mule Palette* view, select *AS2 Connector* and then select the desired operation.
. Drag the operation onto the Studio canvas to the right of the input source.


[[configure-global-element]]
== Configure a Global Element for the Connector

When you configure a connector, it’s best to configure a global element that all instances of that connector in the app can use.
Configuring a global element requires you to provide the authentication credentials the connector uses to access the target
AS2 system.

To configure the global element for AS2 Connector, follow these steps:

. Select the name of the connector in the Studio canvas.
. In the configuration screen for the operation, click the plus sign (+) next to the *Connector configuration* field to access the global element configuration fields.
. On the *Authentication* tab, configure the authentication method for the outbound request.
+
You can reference a configuration file that contains ANT-style property placeholders (recommended),
or you can enter your authorization credentials in the global configuration properties.
For information about the benefits of using property placeholders and how to configure them, see xref:connectors::introduction/intro-connector-configuration-overview.adoc[Anypoint Connector Configuration].
. On the *Advanced* tab, optionally specify reconnection information, including a reconnection strategy.
. Click *Test Connection* to confirm that Mule can connect with the specified server.
. Click *OK*.

[[configure-external-libraries]]
== Configure a Global Element for External Libraries

Mule applications using AS2 Connector must contain only one Global Connector Configuration to provide the external libraries required for the selected security mode.


To configure the global element for AS2 Connector and add external libraries, follow these steps:

. In the *Package Explorer* or *Canvas* in Anypoint Studio, open your Mule flow or configuration.
. Click *Global Elements* (or *Create global element* / the plus icon next to Global Elements).
. Click *Create*, and then search for the *AS2* or *External Libs* option and select *AS2 Connector External Libs - Non FIPS 140-3*.
. Name the configuration.
. Clicking *Configure* > *Add recommended libraries* to add the required libraries for your selected security mode.
. Click *OK* to include the libraries as `dependencies` and `sharedLibraries` in the Mule application `pom.xml` file.
. Verify that your project has the required dependencies for your selected security mode. Add the dependencies via Maven if they weren't added automatically.Click *Global Elements* (or *Create global element* / the plus icon next to Global Elements).

For detailed configuration instructions for other security modes, see xref:as2-connector::as2-connector-upgrade-migrate.adoc[Configure External Libraries].

[[view-app-log]]

== View the App Log

To check for problems, you can view the app log as follows:

* If you’re running the app from Anypoint Platform, the output is visible in the Anypoint Studio console window.
* If you’re running the app using Mule from the command line, the app log is visible in your OS console.

Unless the log file path is customized in the app’s log file (`log4j2.xml`), you can also view the app log in the default location `MULE_HOME/logs/<app-name>.log`.

== Next Step

After you configure a global element and connection information, configure the other fields for the connector.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* xref:as2-connector-reference.adoc[AS2 Reference]
* https://help.mulesoft.com[MuleSoft Help Center]
